// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SanityContent > should render adjacentLists blocks 1`] = `
"<ul>
  <li>item</li>
  <li>item</li>
  <li>item</li>
</ul>
<ol>
  <li>item</li>
  <li>item</li>
  <li>item</li>
</ol>"
`;

exports[`SanityContent > should render adjacentLists blocks with Vue PortableText 1`] = `
"<ul>
  <li>item</li>
  <li>item</li>
  <li>item</li>
</ul>
<ol>
  <li>item</li>
  <li>item</li>
  <li>item</li>
</ol>"
`;

exports[`SanityContent > should render adjacentLists blocks with traditional renderer 1`] = `
"<ul>
  <li>item</li>
  <li>item</li>
  <li>item</li>
</ul>
<ol>
  <li>item</li>
  <li>item</li>
  <li>item</li>
</ol>"
`;

exports[`SanityContent > should render blockquote blocks 1`] = `"<blockquote>Build your next Vue.js application with confidence using <a href="https://nuxtjs.org">NuxtJS</a>. An open source framework making web development simple and powerful.</blockquote>"`;

exports[`SanityContent > should render blockquote blocks with Vue PortableText 1`] = `"<blockquote>Build your next Vue.js application with confidence using <a href="https://nuxtjs.org">NuxtJS</a>. An open source framework making web development simple and powerful.</blockquote>"`;

exports[`SanityContent > should render blockquote blocks with traditional renderer 1`] = `"<blockquote>Build your next Vue.js application with confidence using <a href="https://nuxtjs.org">NuxtJS</a>. An open source framework making web development simple and powerful.</blockquote>"`;

exports[`SanityContent > should render customBlockTypes blocks 1`] = `"<p>An example of <i>custom</i> block types.</p>"`;

exports[`SanityContent > should render customBlockTypes blocks with Vue PortableText 1`] = `"<p>An example of <i _key="7dc51c030a2f" _type="customIcon" icon="cog" text="custom"></i> block types.</p>"`;

exports[`SanityContent > should render customBlockTypes blocks with traditional renderer 1`] = `"<p>An example of <i>custom</i> block types.</p>"`;

exports[`SanityContent > should render customComponent blocks 1`] = `
"<div>propValuetext content</div>
<div>propValuetext content</div>"
`;

exports[`SanityContent > should render customComponent blocks with Vue PortableText 1`] = `
"<div _key="1" _type="customComponent1">propValue
  <!---->
</div>
<div _key="2" _type="customComponent2">propValue
  <!---->
</div>"
`;

exports[`SanityContent > should render customComponent blocks with traditional renderer 1`] = `
"<div>propValuetext content</div>
<div>propValuetext content</div>"
`;

exports[`SanityContent > should render evenMoreNestedList blocks 1`] = `
"<ol>
  <li>1. Top level</li>
  <li>
    <ol>
      <li>a. Second level</li>
      <li>
        <ol>
          <li>i. Third level</li>
        </ol>
      </li>
      <li>b. Second level</li>
    </ol>
  </li>
  <li>2. Top level</li>
  <li>
    <ol>
      <li>a. Second level</li>
    </ol>
  </li>
</ol>"
`;

exports[`SanityContent > should render evenMoreNestedList blocks with Vue PortableText 1`] = `
"<ol>
  <li>1. Top level<ol>
      <li>a. Second level<ol>
          <li>i. Third level</li>
        </ol>
      </li>
      <li>b. Second level</li>
    </ol>
  </li>
  <li>2. Top level<ol>
      <li>a. Second level</li>
    </ol>
  </li>
</ol>"
`;

exports[`SanityContent > should render evenMoreNestedList blocks with traditional renderer 1`] = `
"<ol>
  <li>1. Top level</li>
  <li>
    <ol>
      <li>a. Second level</li>
      <li>
        <ol>
          <li>i. Third level</li>
        </ol>
      </li>
      <li>b. Second level</li>
    </ol>
  </li>
  <li>2. Top level</li>
  <li>
    <ol>
      <li>a. Second level</li>
    </ol>
  </li>
</ol>"
`;

exports[`SanityContent > should render exampleMarkDefs blocks 1`] = `
"<ul>
  <li><strong>Google Analytics</strong>: The Sites use Google Analytics. Further information is available at <a href="https://tools.google.com/dlpage/gaoptout/">https://tools.google.com/dlpage/gaoptout/</a>.</li>
</ul>"
`;

exports[`SanityContent > should render exampleMarkDefs blocks with Vue PortableText 1`] = `
"<ul>
  <li><strong>Google Analytics</strong>: The Sites use Google Analytics. Further information is available at <a href="https://tools.google.com/dlpage/gaoptout/">https://tools.google.com/dlpage/gaoptout/</a>.</li>
</ul>"
`;

exports[`SanityContent > should render exampleMarkDefs blocks with traditional renderer 1`] = `
"<ul>
  <li><strong>Google Analytics</strong>: The Sites use Google Analytics. Further information is available at <a href="https://tools.google.com/dlpage/gaoptout/">https://tools.google.com/dlpage/gaoptout/</a>.</li>
</ul>"
`;

exports[`SanityContent > should render heading blocks 1`] = `"<h3>3. Providing your personal data to others</h3>"`;

exports[`SanityContent > should render heading blocks with Vue PortableText 1`] = `"<h3>3. Providing your personal data to others</h3>"`;

exports[`SanityContent > should render heading blocks with traditional renderer 1`] = `"<h3>3. Providing your personal data to others</h3>"`;

exports[`SanityContent > should render link blocks 1`] = `"<a href="http://test.com/"></a>"`;

exports[`SanityContent > should render link blocks with Vue PortableText 1`] = `"<div style="display: none;">[@portabletext/vue] Unknown block type "link", specify a component for it in the \`components.types\` prop</div>"`;

exports[`SanityContent > should render link blocks with traditional renderer 1`] = `"<a href="http://test.com/"></a>"`;

exports[`SanityContent > should render list blocks 1`] = `
"<ol>
  <li>test</li>
  <li>thing</li>
</ol>"
`;

exports[`SanityContent > should render list blocks with Vue PortableText 1`] = `
"<ol>
  <li>test</li>
  <li>thing</li>
</ol>"
`;

exports[`SanityContent > should render list blocks with traditional renderer 1`] = `
"<ol>
  <li>test</li>
  <li>thing</li>
</ol>"
`;

exports[`SanityContent > should render multipleDecorators blocks 1`] = `"<p>with <strong><em>bold and italic</em></strong> decorators</p>"`;

exports[`SanityContent > should render multipleDecorators blocks with Vue PortableText 1`] = `"<p>with <strong><em>bold and italic</em></strong> decorators</p>"`;

exports[`SanityContent > should render multipleDecorators blocks with traditional renderer 1`] = `"<p>with <strong><em>bold and italic</em></strong> decorators</p>"`;

exports[`SanityContent > should render nestedList blocks 1`] = `
"<h3>3. Providing your personal data to others</h3>
<ol>
  <li>test</li>
  <li>thing</li>
  <li>
    <ul>
      <li>nested</li>
      <li>list</li>
    </ul>
  </li>
</ol>"
`;

exports[`SanityContent > should render nestedList blocks with Vue PortableText 1`] = `
"<h3>3. Providing your personal data to others</h3>
<ol>
  <li>test</li>
  <li>thing<ul>
      <li>nested</li>
      <li>list</li>
    </ul>
  </li>
</ol>"
`;

exports[`SanityContent > should render nestedList blocks with traditional renderer 1`] = `
"<h3>3. Providing your personal data to others</h3>
<ol>
  <li>test</li>
  <li>thing</li>
  <li>
    <ul>
      <li>nested</li>
      <li>list</li>
    </ul>
  </li>
</ol>"
`;

exports[`SanityContent > should render strong blocks 1`] = `"<p>An example of <strong>bold</strong> text and <strong>another</strong>.</p>"`;

exports[`SanityContent > should render strong blocks with Vue PortableText 1`] = `"<p>An example of <strong>bold</strong> text and <strong>another</strong>.</p>"`;

exports[`SanityContent > should render strong blocks with traditional renderer 1`] = `"<p>An example of <strong>bold</strong> text and <strong>another</strong>.</p>"`;

exports[`SanityContent > should render text blocks with marks correctly using Vue PortableText 1`] = `"<p>Regular text and <strong>bold text</strong><em> and italic text</em></p>"`;

exports[`SanityContent > should render textWithProps blocks 1`] = `
"<div>hello worldI’m a heading!</div>
<blockquote class="blockquote">Build your next Vue.js application with confidence using <a href="https://nuxtjs.org">NuxtJS</a>. An open source framework making web development simple and powerful.</blockquote>
<h1>What we do</h1>"
`;

exports[`SanityContent > should render textWithProps blocks with Vue PortableText 1`] = `
"<p>I’m a heading!</p>
<blockquote>Build your next Vue.js application with confidence using <a href="https://nuxtjs.org">NuxtJS</a>. An open source framework making web development simple and powerful.</blockquote>
<h1>What we do</h1>"
`;

exports[`SanityContent > should render textWithProps blocks with traditional renderer 1`] = `
"<div>hello worldI’m a heading!</div>
<blockquote class="blockquote">Build your next Vue.js application with confidence using <a href="https://nuxtjs.org">NuxtJS</a>. An open source framework making web development simple and powerful.</blockquote>
<h1>What we do</h1>"
`;

exports[`SanityContent > should render with Vue PortableText when usePortableTextVue is true 1`] = `""`;

exports[`SanityContent > should render with no props 1`] = `""`;

exports[`SanityContent with Vue PortableText > should handle nested blocks correctly 1`] = `
"<div class="nested-block" _type="nestedBlock" _key="nested1">
  <h3>Nested Block Title</h3>
  <p>Nested block content goes here</p>
  <ul>
    <li>Item 1</li>
    <li>Item 2</li>
    <li>Item 3</li>
  </ul>
</div>"
`;

exports[`SanityContent with Vue PortableText > should pass custom props to components correctly 1`] = `"<div class="custom-component" _type="customBlock" _key="test123">Props: test value, 42</div>"`;

exports[`SanityContent with Vue PortableText > should render link marks with href correctly 1`] = `"<p>Visit <a href="https://example.com">our website</a> for more info.</p>"`;

exports[`SanityContent with Vue PortableText > should render mixed content blocks consistently with both rendering methods > portable-text-rendering 1`] = `
"<div class="custom-content" _type="customBlock" _key="custom1">Custom block content</div>
<h2><strong>Styled heading with marks</strong></h2>
<ul>
  <li>List item 1</li>
  <li><em>List item 2 with emphasis</em></li>
</ul>"
`;

exports[`SanityContent with Vue PortableText > should render mixed content blocks consistently with both rendering methods > traditional-rendering 1`] = `
"<div class="custom-content">Custom block content</div>
<h2><strong>Styled heading with marks</strong></h2>
<ul>
  <li>List item 1</li>
  <li><em>List item 2 with emphasis</em></li>
</ul>"
`;
